samples/_failures_safe/1761077234_96562d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d069ae4a.c: In function ‘main’:
./samples/SAFE/__tmp_d069ae4a.c:122:9: error: expected ‘,’ or ‘;’ at end of input
  122 |         size_t len = strlen
      |         ^~~~~~
./samples/SAFE/__tmp_d069ae4a.c:122:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d069ae4a.c:122:9: error: expected declaration or statement at end of input
